fix horizontal overflow width issue

--- a/assets/css/1-base/_base.scss
+++ b/assets/css/1-base/_base.scss
@@ -85,6 +85,7 @@ body {
   background: $bg-color;
   margin: 0 auto;
   min-height: 100vh;
+  min-width: 100vw;
 }
 
 body {
@@ -92,6 +93,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 18px;
   line-height: 1.6;
+  min-width: 100vw;
   text-decoration: none;
   width: 100%;
 }
