--- a/assets/css/2-home/_home-experiments.scss
+++ b/assets/css/2-home/_home-experiments.scss
@@ -4,7 +4,6 @@ $parallax-background-height: $parallax-window-height * 1.5;
 .parallax-window {
   max-height: $parallax-window-height;
   overflow: hidden;
-  padding: 0 10%;
   position: relative;
   text-align: center;
   width: 100%;
